edits to html file

--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
 
     <link rel="stylesheet" href="./assets/css/style.css">
 
-    <title>5 Day Weather Forecast</title>
+    <title>5-Day Weather Forecast</title>
 </head>
 <body>
     <header>
-        <h1>5 Day Weather Dashboard</h1>
+        <h1>5-Day Weather Dashboard</h1>
     </header>
     <div class="main-container">
         <aside>
             <form class="search-form">
                 <label for="city-name">
-                    <h2>Search for a City:</h2>
+                    <h2>Search By City:</h2>
                 </label>
                 <input id="city-name" type="text" placeholder="Washington, D.C.">
                 <button id="search-btn" type="submit">Search</button>
