updated file paths

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <link rel="shortcut icon" href="./Assets/images/german-shepherd-2.jpg" type="image/x-icon">
 
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./Assets/css/style.css">
 
     <title>5-Day Weather Forecast</title>
 </head>
@@ -48,6 +48,6 @@
         </section>
     </div>
 
-    <script src="./assets/js/script.js"></script>
+    <script src="./Assets/js/script.js"></script>
 </body>
 </html>
